--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,134 +1,152 @@
-# Eventually want to use this for dependencies, but Android Studio is not ready
-
 [versions]
-activity = "1.6.0"
-agp = "7.3.0"
-appcompat = "1.5.1"
+
+android-gradle-plugin = "7.3.0"
+
+androidx-activity = "1.6.0"
+androidx-appcompat = "1.5.1"
+androidx-browser = "1.4.0"
+androidx-cardview = "1.0.0"
+androidx-compose-compiler = "1.3.2"
+androidx-compose-animation = "1.3.0-beta03"
+androidx-compose-foundation = "1.3.0-beta03"
+androidx-compose-material = "1.3.0-beta03"
+androidx-compose-material3 = "1.0.0-beta03"
+androidx-compose-runtime = "1.3.0-beta03"
+androidx-compose-theme-adapter = "1.1.19"
+androidx-compose-ui = "1.3.0-beta03"
+androidx-constraintlayout = "2.1.4"
+androidx-core = "1.9.0"
+androidx-datastore = "1.0.0"
+androidx-expresso-core = "3.4.0"
+androidx-ext-junit = "1.1.3"
+androidx-fragment-ktx = "1.5.3"
+androidx-legacy = "1.0.0"
+androidx-lifecycle = "2.5.1"
+androidx-lifecycle-extensions = "2.2.0"
+androidx-media = "1.6.0"
+androidx-media2 = "1.2.1"
+androidx-navigation = "2.5.2"
+androidx-paging = "3.1.1"
+androidx-recyclerview = "1.2.1"
+androidx-room = "2.4.3"
+androidx-viewpager2 = "1.0.0"
+androidx-webkit = "1.5.0"
+
 assertj = "3.23.1"
-browser = "1.4.0"
-cardview = "1.0.0"
-compose-compiler = "1.3.1"
-compose-animation = "1.3.0-beta03"
-compose-foundation = "1.3.0-beta03"
-compose-material = "1.3.0-beta03"
-compose-material3 = "1.0.0-beta03"
-compose-runtime = "1.3.0-beta03"
-compose-theme-adapter = "1.1.19"
-compose-ui = "1.3.0-beta03"
-constraint = "2.1.4"
-core = "1.9.0"
-coroutines = "1.6.4"
-coroutines-test = "1.6.4"
-datastore = "1.0.0"
+
 dokka = "1.7.10"
-exoplayer = "2.18.1"
-expresso-core = "3.4.0"
-ext-junit = "1.1.3"
-fragment-ktx = "1.5.3"
-joda-time = "2.10.14"
+
+google-exoplayer = "2.18.1"
+google-material = "1.6.1"
+
+joda-time = "2.11.2"
 jsoup = "1.15.3"
 junit = "4.13.2"
+
 kotlin = "1.7.20"
-kotlin-serialization = "1.4.0"
-legacy = "1.0.0"
-lifecycle = "2.5.1"
-lifecycle-extensions = "2.2.0"
-material = "1.6.1"
-media = "1.6.0"
-media2 = "1.2.1"
-navigation = "2.5.2"
-paging = "3.1.1"
+kotlinx-coroutines = "1.6.4"
+kotlinx-coroutines-test = "1.6.4"
+kotlinx-serialization-json = "1.4.0"
+
 pdfium = "1.8.2"
 pdf-viewer = "2.8.2"
 photoview = "2.3.0"
 picasso = "2.71828"
 pspdfkit = "8.2.1"
-recyclerview = "1.2.1"
-robolectric = "4.8.1"
-room = "2.4.3"
+
+robolectric = "4.9"
+
 timber = "5.0.1"
-viewpager2 = "1.0.0"
-webkit = "1.5.0"
 
 [libraries]
-activity-ktx = { group = "androidx.activity", name = "activity-ktx", version.ref = "activity" }
-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+androidx-activity-ktx = { group = "androidx.activity", name = "activity-ktx", version.ref = "androidx-activity" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidx-appcompat" }
+androidx-browser = { group = "androidx.browser", name = "browser", version.ref = "androidx-browser" }
+androidx-cardview = { group = "androidx.cardview", name = "cardview", version.ref = "androidx-cardview" }
+androidx-compose-activity = { group = "androidx.activity", name = "activity-compose", version.ref = "androidx-activity" }
+androidx-compose-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "androidx-compose-animation" }
+androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "androidx-compose-foundation" }
+androidx-compose-material = { group = "androidx.compose.material", name = "material", version.ref = "androidx-compose-material" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "androidx-compose-material3" }
+androidx-compose-material-icons = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "androidx-compose-material" }
+androidx-compose-theme-adapter = { group ="com.google.android.material", name = "compose-theme-adapter", version.ref = "androidx-compose-theme-adapter" }
+androidx-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "androidx-compose-ui" }
+androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "androidx-compose-ui" }
+androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidx-constraintlayout" }
+androidx-core = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "androidx-datastore" }
+androidx-expresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "androidx-expresso-core" }
+androidx-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-ext-junit" }
+androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "androidx-fragment-ktx" }
+androidx-legacy-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "androidx-legacy" }
+androidx-legacy-ui = { group = "androidx.legacy", name = "legacy-support-core-ui", version.ref = "androidx-legacy" }
+androidx-lifecycle-common = { group = "androidx.lifecycle", name = "lifecycle-common-java8", version.ref = "androidx-lifecycle" }
+androidx-lifecycle-extensions = { group = "androidx.lifecycle", name = "lifecycle-extensions", version.ref = "androidx-lifecycle-extensions" }
+androidx-lifecycle-livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "androidx-lifecycle" }
+androidx-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "androidx-lifecycle" }
+androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle" }
+androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
+androidx-lifecycle-vmsavedstate = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-savedstate", version.ref = "androidx-lifecycle" }
+androidx-media = { group = "androidx.media", name = "media", version.ref = "androidx-media" }
+androidx-media2-session = { group = "androidx.media2", name = "media2-session", version.ref = "androidx-media2" }
+androidx-media2-player = { group = "androidx.media2", name = "media2-player", version.ref = "androidx-media2" }
+androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "androidx-navigation" }
+androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "androidx-navigation" }
+androidx-paging = { group = "androidx.paging", name = "paging-runtime-ktx", version.ref = "androidx-paging" }
+androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "androidx-recyclerview" }
+androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "androidx-room" }
+androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "androidx-room" }
+androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "androidx-room" }
+androidx-viewpager2 = { group = "androidx.viewpager2", name = "viewpager2", version.ref = "androidx-viewpager2" }
+androidx-webkit = { group = "androidx.webkit", name = "webkit", version.ref = "androidx-webkit" }
+
 assertj = { group = "org.assertj", name = "assertj-core", version.ref = "assertj" }
-browser = { group = "androidx.browser", name = "browser", version.ref = "browser" }
-cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
-compose-activity = { group = "androidx.activity", name = "activity-compose", version.ref = "activity" }
-compose-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "compose-animation" }
-compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "compose-foundation" }
-compose-material = { group = "androidx.compose.material", name = "material", version.ref = "compose-material" }
-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "compose-material3" }
-compose-material-icons = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "compose-material" }
-compose-theme-adapter = { group ="com.google.android.material", name = "compose-theme-adapter", version.ref = "compose-theme-adapter" }
-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose-ui" }
-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose-ui" }
-constraint-layout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraint" }
-core = { group = "androidx.core", name = "core-ktx", version.ref = "core" }
-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutines" }
-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutines-test" }
-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
+
 dokka-gradle = { group = "org.jetbrains.dokka", name = "dokka-gradle-plugin", version.ref = "dokka" }
-exoplayer-core = { group = "com.google.android.exoplayer", name = "exoplayer-core", version.ref = "exoplayer" }
-exoplayer-extension-media2 = { group = "com.google.android.exoplayer", name = "extension-media2", version.ref = "exoplayer" }
-exoplayer-mediasession = { group = "com.google.android.exoplayer", name = "extension-mediasession", version.ref = "exoplayer" }
-exoplayer-ui = { group = "com.google.android.exoplayer", name = "exoplayer-ui", version.ref = "exoplayer" }
-exoplayer-workmanager = { group = "com.google.android.exoplayer", name = "extension-workmanager", version.ref = "exoplayer" }
-expresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "expresso-core" }
-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "ext-junit" }
-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment-ktx" }
+
+google-exoplayer-core = { group = "com.google.android.exoplayer", name = "exoplayer-core", version.ref = "google-exoplayer" }
+google-exoplayer-extension-media2 = { group = "com.google.android.exoplayer", name = "extension-media2", version.ref = "google-exoplayer" }
+google-exoplayer-mediasession = { group = "com.google.android.exoplayer", name = "extension-mediasession", version.ref = "google-exoplayer" }
+google-exoplayer-ui = { group = "com.google.android.exoplayer", name = "exoplayer-ui", version.ref = "google-exoplayer" }
+google-exoplayer-workmanager = { group = "com.google.android.exoplayer", name = "extension-workmanager", version.ref = "google-exoplayer" }
+google-material = { group = "com.google.android.material", name = "material", version.ref = "google-material" }
+
 joda-time = { group = "joda-time", name = "joda-time", version.ref = "joda-time" }
 jsoup = { group = "org.jsoup", name = "jsoup", version.ref = "jsoup" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
+
 kotlin-gradle = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-junit = { group = "org.jetbrains.kotlin", name = "kotlin-test-junit", version.ref = "kotlin" }
 kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "kotlin" }
-kotlin-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlin-serialization" }
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib-jdk8", version.ref = "kotlin" }
-legacy-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacy" }
-legacy-ui = { group = "androidx.legacy", name = "legacy-support-core-ui", version.ref = "legacy" }
-lifecycle-common = { group = "androidx.lifecycle", name = "lifecycle-common-java8", version.ref = "lifecycle" }
-lifecycle-extensions = { group = "androidx.lifecycle", name = "lifecycle-extensions", version.ref = "lifecycle-extensions" }
-lifecycle-livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycle" }
-lifecycle-runtime = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
-lifecycle-vmsavedstate = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-savedstate", version.ref = "lifecycle" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-media = { group = "androidx.media", name = "media", version.ref = "media" }
-media2-session = { group = "androidx.media2", name = "media2-session", version.ref = "media2" }
-media2-player = { group = "androidx.media2", name = "media2-player", version.ref = "media2" }
-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
-navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
-paging = { group = "androidx.paging", name = "paging-runtime-ktx", version.ref = "paging" }
+
+kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
+kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
+kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinx-coroutines-test" }
+kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization-json" }
+
 pdfium = { group = "com.github.barteksc", name = "pdfium-android", version.ref="pdfium" }
 pdf-viewer = { group = "com.github.barteksc", name ="android-pdf-viewer", version.ref="pdf-viewer" }
 photoview = { group = "com.github.chrisbanes", name = "PhotoView", version.ref = "photoview" }
 picasso = { group = "com.squareup.picasso", name = "picasso", version.ref = "picasso" }
 pspdfkit = { group = "com.pspdfkit", name = "pspdfkit", version.ref ="pspdfkit" }
-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+
 robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "robolectric" }
-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
-viewpager2 = { group = "androidx.viewpager2", name = "viewpager2", version.ref = "viewpager2" }
-webkit = { group = "androidx.webkit", name = "webkit", version.ref = "webkit" }
+
 
 [bundles]
-exoplayer = ["exoplayer-core", "exoplayer-ui", "exoplayer-mediasession", "exoplayer-workmanager", "exoplayer-extension-media2"]
-coroutines = ["coroutines-core", "coroutines-android"]
-lifecycle = ["lifecycle-livedata", "lifecycle-runtime", "lifecycle-viewmodel", "lifecycle-vmsavedstate"]
-media2 = ["media2-session", "media2-player"]
-navigation = ["navigation-fragment", "navigation-ui"]
-room = ["room-runtime", "room-ktx"]
-test-frameworks = ["junit", "ext-junit", "expresso-core", "robolectric", "kotlin-junit", "assertj", "coroutines-test"]
+exoplayer = ["google-exoplayer-core", "google-exoplayer-ui", "google-exoplayer-mediasession", "google-exoplayer-workmanager", "google-exoplayer-extension-media2"]
+coroutines = ["kotlinx-coroutines-core", "kotlinx-coroutines-android"]
+lifecycle = ["androidx-lifecycle-livedata", "androidx-lifecycle-runtime", "androidx-lifecycle-viewmodel", "androidx-lifecycle-vmsavedstate"]
+media2 = ["androidx-media2-session", "androidx-media2-player"]
+navigation = ["androidx-navigation-fragment", "androidx-navigation-ui"]
+room = ["androidx-room-runtime", "androidx-room-ktx"]
+test-frameworks = ["junit", "androidx-ext-junit", "androidx-expresso-core", "robolectric", "kotlin-junit", "assertj", "kotlinx-coroutines-test"]
 
 [plugins]
-agpapp = { id = "com.android.application", version.ref = "agp" }
-agplib = { id = "com.android.library", version.ref = "agp" }
+agpapp = { id = "com.android.application", version.ref = "android-gradle-plugin" }
+agplib = { id = "com.android.library", version.ref = "android-gradle-plugin" }
 kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
