Move several items under Adapters

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,11 +56,12 @@ nav:
       - Navigator: readium/navigator/index.md
       - OPDS: readium/opds/index.md
       - LCP: readium/lcp/index.md
-      - Navigator media2: readium/navigator-media2/index.md
-      - PDFium Document: readium/adapters/pdfium/pdfium-document/index.md
-      - PDFium Navigator: readium/adapters/pdfium/pdfium-navigator/index.md
-      - Pspdfkit Document: readium/adapters/pspdfkit/pspdfkit-document/index.md
-      - Pspdfkit Navigator: readium/adapters/pspdfkit/pspdfkit-navigator/index.md
+      - Adapters:
+          - Navigator media2: readium/navigator-media2/index.md
+          - PDFium Document: readium/adapters/pdfium/pdfium-document/index.md
+          - PDFium Navigator: readium/adapters/pdfium/pdfium-navigator/index.md
+          - Pspdfkit Document: readium/adapters/pspdfkit/pspdfkit-document/index.md
+          - Pspdfkit Navigator: readium/adapters/pspdfkit/pspdfkit-navigator/index.md
 
 extra_css:
   - readium_colors.css
