--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,13 +7,13 @@ androidx-appcompat = "1.5.1"
 androidx-browser = "1.4.0"
 androidx-cardview = "1.0.0"
 androidx-compose-compiler = "1.3.2"
-androidx-compose-animation = "1.3.0-beta03"
-androidx-compose-foundation = "1.3.0-beta03"
-androidx-compose-material = "1.3.0-beta03"
-androidx-compose-material3 = "1.0.0-beta03"
-androidx-compose-runtime = "1.3.0-beta03"
+androidx-compose-animation = "1.3.0"
+androidx-compose-foundation = "1.3.0"
+androidx-compose-material = "1.3.0"
+androidx-compose-material3 = "1.0.0"
+androidx-compose-runtime = "1.3.0"
 androidx-compose-theme-adapter = "1.1.19"
-androidx-compose-ui = "1.3.0-beta03"
+androidx-compose-ui = "1.3.0"
 androidx-constraintlayout = "2.1.4"
 androidx-core = "1.9.0"
 androidx-datastore = "1.0.0"
@@ -72,6 +72,7 @@ androidx-compose-material-icons = { group = "androidx.compose.material", name = 
 androidx-compose-theme-adapter = { group ="com.google.android.material", name = "compose-theme-adapter", version.ref = "androidx-compose-theme-adapter" }
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "androidx-compose-ui" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "androidx-compose-ui" }
+androidx-compose-ui-util = { group = "androidx.compose.ui", name = "ui-util", version.ref = "androidx-compose-ui" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidx-constraintlayout" }
 androidx-core = { group = "androidx.core", name = "core-ktx", version.ref = "androidx-core" }
 androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "androidx-datastore" }
@@ -137,7 +138,7 @@ timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "tim
 
 
 [bundles]
-compose = ["androidx-compose-activity", "androidx-compose-animation", "androidx-compose-foundation", "androidx-compose-material", "androidx-compose-material3", "androidx-compose-material-icons", "androidx-compose-theme-adapter", "androidx-compose-ui", "androidx-compose-ui-tooling"]
+compose = ["androidx-compose-activity", "androidx-compose-animation", "androidx-compose-foundation", "androidx-compose-material", "androidx-compose-material3", "androidx-compose-material-icons", "androidx-compose-theme-adapter", "androidx-compose-ui", "androidx-compose-ui-tooling",  "androidx-compose-ui-util"]
 coroutines = ["kotlinx-coroutines-core", "kotlinx-coroutines-android"]
 exoplayer = ["google-exoplayer-core", "google-exoplayer-ui", "google-exoplayer-mediasession", "google-exoplayer-workmanager", "google-exoplayer-extension-media2"]
 lifecycle = ["androidx-lifecycle-common", "androidx-lifecycle-extensions", "androidx-lifecycle-livedata", "androidx-lifecycle-runtime", "androidx-lifecycle-viewmodel", "androidx-lifecycle-vmsavedstate", "androidx-lifecycle-viewmodel-compose"]
