--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,7 +46,7 @@ nav:
   - Migration Guide: migration-guide.md
   - User Guides:
       - Navigator settings: guides/navigator-settings.md
-      - Adding custom fonts: guides/epub-custom-fonts.md
+      - EPUB font families: guides/epub-fonts.md
       - PDF support: guides/pdf.md
       - Text-to-speech: guides/tts.md
       - Extracting the content of a publication: guides/content.md
