--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -4,13 +4,12 @@ on:
   push:
     branches: [ main, develop ]
   pull_request:
-    types: [ review_requested, ready_for_review ]
 
 jobs:
   build:
     name: Build and test
     runs-on: ubuntu-latest
-
+    if: ${{ !github.event.pull_request.draft }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -27,6 +26,7 @@ jobs:
   lint-kt:
     name: Lint Kotlin
     runs-on: macos-latest
+    if: ${{ !github.event.pull_request.draft }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -41,12 +41,12 @@ jobs:
   lint-js:
     name: Lint JavaScript
     runs-on: macos-latest
+    if: ${{ !github.event.pull_request.draft }}
     defaults:
       run:
         working-directory: readium/navigator
     env:
       scripts: ${{ 'src/main/assets/_scripts' }}
-
     steps:
       - name: Checkout
         uses: actions/checkout@v2
