--- a/readium/opds/src/main/AndroidManifest.xml
+++ b/readium/opds/src/main/AndroidManifest.xml
@@ -1,10 +1,7 @@
 <!--
-  ~ Module: r2-opds-kotlin
-  ~ Developers: Aferdita Muriqi, Clément Baumann
-  ~
-  ~ Copyright (c) 2018. Readium Foundation. All rights reserved.
-  ~ Use of this source code is governed by a BSD-style license which is detailed in the
-  ~ LICENSE file present in the project repository where this source code is maintained.
-  -->
+  Copyright 2023 Readium Foundation. All rights reserved.
+  Use of this source code is governed by the BSD-style license
+  available in the top-level LICENSE file of the project.
+-->
 
 <manifest />
