--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -49,6 +49,11 @@ jobs:
     env:
       scripts: ${{ 'src/main/assets/_scripts' }}
     steps:
+      - name: Enable Corepack
+        if: inputs.enable-corepack == 'true'
+        shell: bash
+        working-directory: ${{ inputs.cwd }}
+        run: corepack enable
       - name: Checkout
         uses: actions/checkout@v3
       - name: Install dependencies
