--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -60,7 +60,7 @@ jobs:
           cache: 'pnpm'
           cache-dependency-path: readium/navigator/src/main/assets/_scripts/pnpm-lock.yaml
       - name: Install dependencies
-        run: pnpm --dir "$scripts" install
+        run: pnpm --dir "$scripts" install --frozen-lockfile
       - name: Lint
         run: pnpm --dir "$scripts" run lint
       - name: Check formatting
